<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/nav_admin_dashboard" />
        <item
            android:id="@+id/nav_class_management"
            android:icon="@drawable/ic_baseline_class_24"
            android:title="@string/nav_list_classes" />
        <item
            android:id="@+id/nav_student_management"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/nav_students" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_baseline_rule_24"
            android:title="@string/nav_attendance" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/nav_reports" />
    </group>

    <item android:title="@string/title_account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>