<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_student_dashboard"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="Tổng quan" />
        <item
            android:id="@+id/nav_student_qr_scan"
            android:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:title="@string/nav_student_qr_scan" />
        <item
            android:id="@+id/nav_student_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/nav_student_history" />
    </group>

    <item android:title="@string/title_account">
        <menu>
            <item
                android:id="@+id/nav_student_change_password"
                android:icon="@drawable/ic_baseline_lock_24"
                android:title="@string/nav_change_password" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>